Setup Payment Page

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ body {
 
 button {
     background-color: transparent;
+    margin-right: 40px;
 }
 
 button img {
@@ -43,4 +44,8 @@ button img {
 
 .no-bdr {
     border: none;
+}
+
+td {
+    margin-right: 60px;
 }
