Update LUTs page with new images and styling

--- a/style.css
+++ b/style.css
@@ -49,3 +49,11 @@ button img {
 td {
     margin-right: 60px;
 }
+
+figcaption {
+    font-family: fantasy;
+}
+
+.buy-button {
+    background-color: #b27600;
+}
